# swc_hhmi

./: .gitignore  2013-may6-swc-hhmi.pptx  README  README.md  introduction.md
check_setup/: check_setup  configure.ac
check_setup/m4/: ax_python_module.m4
datasets/: olympic_athletes_raw.csv
day1.pythonadv/: Data_Analysis_Intro.ipynb  README.md  day1_python.ipynb  day1_python_master.ipynb  day1_pythonadv.md  olympic_medals.csv  strip_code.py
day1.pythonintro/: TODO
day1.pythonintro/data_structures/: data_structures.ipynb
day1.pythonintro/intro/: MakeAnimals.ipynb  animals.txt  big_animals.txt  dingwall_animals.txt  fergus_animals.txt  macguffin_animals.txt  merida_animals.txt
day1.shell/: Readme.md  TODO  exercise_solutions.ipynb  suggestions.txt
day2.automation/: README.md  mean.py  test_data.txt
day2.testing/: README.md  for_test.sh  mean.py  run_all_tests.sh  test_blank_line.txt  test_float.txt  test_function.py  test_letters.txt  test_out.txt  testing_example.py
day2.versioncontrol/: README.md  git-cheat-sheet.md
masters/: CreateIntroDataset.ipynb  Data_Analysis_Intro.ipynb  IPython Data Analysis Introduction.ipynb
pandas/: Makefile  README.md  notebook2markdown.py
pandas/data/: weather-mod.csv  weather-mod.tsv
